fix(Library): Fixing tile vertical overflow

--- a/app/styles/_library.scss
+++ b/app/styles/_library.scss
@@ -25,7 +25,6 @@
     vertical-align: top;
 
     width: 200px;
-    height: 155px;
 
     h5 {
         text-align: center;
